Fix chat input alignment

--- a/src/renderer/App.global.css
+++ b/src/renderer/App.global.css
@@ -6,3 +6,14 @@ html, body {
   overflow: hidden;
   margin: 0;
 }
+
+::-webkit-scrollbar {
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 0.65rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(150, 150, 150);
+  border-radius: 30px;
+}
+
